# scicookie

./: .buildinfo  .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .makim.yaml  .pre-commit-config.yaml  .prettierignore  .releaserc.json  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.rst  contributing.html  cookiecutter.json  genindex.html  guide.html  index.html  index.md  intro.html  mkdocs.yaml  mkdocs.yml  objects.inv  osl_python_template_cli.py  pyproject.toml  search.html  searchindex.js  sitemap.xml
conda/: dev.yaml  (+1 more)
src/scicookie/{{cookiecutter.project_slug}}/: .editorconfig  .gitignore  .gitlab-ci.yml  .makim.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .releaserc.json  LICENSE  Makefile  README.md  azure-pipelines.yml  pyproject.toml
src/scicookie/{{cookiecutter.project_slug}}/.circleci/: config.yml
src/scicookie/{{cookiecutter.project_slug}}/.github/: PULL_REQUEST_TEMPLATE.md
src/scicookie/{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
src/scicookie/{{cookiecutter.project_slug}}/.github/workflows/: main.yaml  release.yaml  stale.yaml
src/scicookie/{{cookiecutter.project_slug}}/build-system/: CMakeLists.txt  Cargo.toml  base-dev-deps-pyproject.toml  base-pyproject.toml  deps-pyproject.toml  flit-pyproject.toml  hatch-pyproject.toml  hatchling-pyproject.toml  lib.rs  main.cpp  maturin-pyproject.toml  meson.build  mesonpy-pyproject.toml  pdm-pyproject.toml  poetry-pyproject.toml  pybind11-pyproject.toml  pybind11.cpp  rye-pyproject.toml  scikit-build-core-pyproject.toml  setup.py  setuptools-pyproject.toml  skcdemo.cpp
src/scicookie/{{cookiecutter.project_slug}}/build-system/base/: config-bandit.toml  config-black.toml  config-isort.toml  config-mypy.toml  config-pytest.toml  config-ruff.toml  config-vulture.toml  dev-deps-config-pyproject.toml  dev-deps-pyproject.toml  pyproject.toml  urls-pyproject.toml
src/scicookie/{{cookiecutter.project_slug}}/build-system/flit/: pyproject.toml
src/scicookie/{{cookiecutter.project_slug}}/build-system/hatch/: pyproject.toml
src/scicookie/{{cookiecutter.project_slug}}/build-system/maturin/: Cargo.toml  lib.rs  pyproject.toml
src/scicookie/{{cookiecutter.project_slug}}/build-system/mesonpy/: main.cpp  meson.build  pyproject.toml
src/scicookie/{{cookiecutter.project_slug}}/build-system/pdm/: pyproject.toml
src/scicookie/{{cookiecutter.project_slug}}/build-system/pixi/: pyproject.toml
src/scicookie/{{cookiecutter.project_slug}}/build-system/poetry/: pyproject.toml
src/scicookie/{{cookiecutter.project_slug}}/build-system/pybind11/: CMakeLists.txt  pyproject.toml
src/scicookie/{{cookiecutter.project_slug}}/build-system/scikit-build-core/: CMakeLists.txt  main.cpp  pyproject.toml
src/scicookie/{{cookiecutter.project_slug}}/build-system/setuptools/: pyproject.toml
src/scicookie/{{cookiecutter.project_slug}}/coc/: CODE_OF_CONDUCT.md  NUMFOCUS_adapted_coc.md  PYTHON_ADAPTED_COC.md
src/scicookie/{{cookiecutter.project_slug}}/conda/: dev.yaml
src/scicookie/{{cookiecutter.project_slug}}/containers/: Dockerfile  compose.yaml
src/scicookie/{{cookiecutter.project_slug}}/docs/: changelog.md  contributing.md  example.ipynb  index.md  installation.md
src/scicookie/{{cookiecutter.project_slug}}/docs-jupyter-book/: _config.yaml  _toc.yml
src/scicookie/{{cookiecutter.project_slug}}/docs-mkdocs/: mkdocs.yaml
src/scicookie/{{cookiecutter.project_slug}}/docs-quarto/: _quarto.yml
src/scicookie/{{cookiecutter.project_slug}}/docs-sphinx/: conf.py  index-myst.md  index.rst
src/scicookie/{{cookiecutter.project_slug}}/governance/: numpy_governance.md  sciml_governance.md
src/scicookie/{{cookiecutter.project_slug}}/release-please/: release-please.yml
src/scicookie/{{cookiecutter.project_slug}}/release-semantic/: .releaserc.json
src/scicookie/{{cookiecutter.project_slug}}/roadmap/: ignite_roadmap.md
src/scicookie/{{cookiecutter.project_slug}}/scripts/: check-gitlab-ci.sh  gen_ref_nav.py
src/scicookie/{{cookiecutter.project_slug}}/tests/: test_main.py  test_{{cookiecutter.package_slug}}.py  test_{{cookiecutter.project_slug}}.py
src/scicookie/{{cookiecutter.project_slug}}/{{cookiecutter.package_slug}}/: __init__.py  __main__.py  cli.py
{{cookiecutter.project_slug}}/: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  Makefile  README.md  mkdocs.yaml  pre-commit-config.yaml  pyproject.toml
{{cookiecutter.project_slug}}/.github/: PULL_REQUEST_TEMPLATE.md
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml  ~release-checklist.md
{{cookiecutter.project_slug}}/.github/workflows/: main.yaml  release.yaml
{{cookiecutter.project_slug}}/bandit/: .bandit
{{cookiecutter.project_slug}}/coc/: CITIZEN.md
{{cookiecutter.project_slug}}/conda/: dev.yaml
{{cookiecutter.project_slug}}/containers/: Dockerfile  compose.yaml
{{cookiecutter.project_slug}}/docs/: conf.py  contributing.md  example.ipynb  index.md  index.rst  installation.rst
{{cookiecutter.project_slug}}/docs-jupyter-book/: _config.yml  _toc.yaml  _toc.yml  chap_2.ipynb  intro.md  sample.ipynb
{{cookiecutter.project_slug}}/docs-mkdocs/: mkdocs.yaml
{{cookiecutter.project_slug}}/docs-sphinx/: conf.py
{{cookiecutter.project_slug}}/docs-sphinx-md/: conf.py
{{cookiecutter.project_slug}}/docs-sphinx-rst/: conf.py  contributing.rst  index.rst  installation.rst
{{cookiecutter.project_slug}}/docs/{{cookiecutter.project_slug}}-book/: _config.yml
{{cookiecutter.project_slug}}/governance/: numpy_governance.md  sciml_governance.md
{{cookiecutter.project_slug}}/roadmap/: ignite_roadmap.md
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_slug}}/: __init__.py  __main__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
(+102 files in other folders)
