{% if build_system == "poetry" -%}
[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"  # semantic-release
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.author_full_name }} <{{ cookiecutter.author_email }}>"]
license = "{{ cookiecutter.project_license }}"
include = [
  "*.cfg",
  "*.ini",
  "*.js",
  "*.json",
  "*.lock",
  "*.md",
  "*.py",
  "*.sh",
  "*.rst",
  "*.txt",
  "*.toml",
  "*.yml",
  "*.yaml",
  ".github",
  "conda",
  "docker",
  "docs",
  ".dockerignore",
  ".env.tpl",
  ".makim.yaml",
  ".containers-sugar.yaml",
  ".gitignore",
  "Makefile",
]
exclude = [
  ".git/*",
  ".env*",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
{% if cookiecutter.use_pytest -%}
pytest = "^7"
{% if cookiecutter.use_coverage -%}
pytest-cov = "^4"
{% endif -%}
{% endif %}{# use_pytest #}
{% if cookiecutter.use_coverage -%}
coverage = "^7"
{% endif %}
{% if cookiecutter.use_blue -%}
blue = "^0.9.1"
{% endif %}
{% if cookiecutter.use_black -%}
black = "^23"
{% endif %}
{% if cookiecutter.use_isort -%}
isort = "^5"
{% endif %}
{% if cookiecutter.use_pre_commit -%}
pre-commit = "^2"
{% endif %}
{% if cookiecutter.use_flake8 -%}
flake8 = "^4"
{% endif %}
{% if cookiecutter.use_mypy -%}
mypy = "^0.931"
{% endif %}
urllib3 = "<2"  # fix poetry issues
{%- if cookiecutter.use_bandit %}
bandit = "^1.7.5"
{%- endif %}
{%- if cookiecutter.use_pydocstyle +%}
pydocstyle = "^6.3.0"
{%- endif %}
{%- if cookiecutter.use_vulture +%}
vulture = "^2.7"
{%- endif %}
{%- if cookiecutter.use_mccabe %}
mccabe = "^0.6.1"
{%- endif %}
{%- if cookiecutter.add_containers in ['Docker', 'Podman'] %}
compose-go = "^2.18.0" # if you want to use docker-compose from your system, remove compose-go here
{%- endif %}
{%- if cookiecutter.documentation_engine == 'mkdocs' %}
Jinja2 = "<3.1.0"
mkdocs = ">=1.2.3,<2"
mkdocs-exclude = ">=1.0.2,<2"
mkdocs-jupyter = ">=0.20.0,<1"
mkdocs-literate-nav = ">=0.4.1,<1"
mkdocs-macros-plugin = ">=0.6.3,<1"
mkdocs-material = ">=8.2.1,<9"
mkdocstrings = ">=0.17.0,<0.18.0"
{%- elif cookiecutter.documentation_engine == 'sphinx' %}
Sphinx = "^5.0.0"
sphinx-rtd-theme = "^1.1.1"
importlib-metadata = "^5.0.0"
myst-parser = "^0.18.1"
{%- elif cookiecutter.documentation_engine == 'jupyter-book' %}
jupyter-book = "^0.12.3"
myst-parser = "^0.15.0"
{% endif %}

{%- endif %}{# build_sytem == "poetry" #}

{% if cookiecutter.use_pytest -%}
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
{% endif %}

{% if cookiecutter.use_blue -%}
[tool.blue]
{% elif cookiecutter.use_black -%}
[tool.black]
{% endif %}
{% if cookiecutter.use_black or cookiecutter.use_blue -%}
line-length = 79
target-version = ["py38"]
force-exclude = """
(
  /(
      docs/*
    |.*\\.egg-info
  )/
)
"""
{% endif -%}

{% if cookiecutter.use_isort -%}
[tool.isort]
ensure_newline_before_comments = true
line_length = 79
multi_line_output = 3
include_trailing_comma = true
skip_glob = ["docs/*", "*.egg-info"]
{% endif -%}
