[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"  # semantic-release
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.author_full_name }} <{{ cookiecutter.author_email }}>"]
license = "{{ cookiecutter.project_license }}"
include = [
  "*.cfg",
  "*.ini",
  "*.js",
  "*.json",
  "*.lock",
  "*.md",
  "*.py",
  "*.sh",
  "*.rst",
  "*.txt",
  "*.toml",
  "*.yml",
  "*.yaml",
  ".github",
  "conda",
  "docker",
  "docs",
  ".dockerignore",
  ".env.tpl",
  ".makim.yaml",
  ".containers-sugar.yaml",
  ".gitignore",
  "Makefile",
]
exclude = [
  ".git/*",
  ".env*",
]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
urllib3 = "<2"  # fix poetry issues
{# keep this line here #}
{%- if cookiecutter.use_pytest == "yes" -%}
pytest = "^7"
{% if cookiecutter.use_coverage == "yes" -%}
pytest-cov = "^4"
{% endif %}
{%- endif -%}{#- end of use_pytest -#}
{%- if cookiecutter.use_coverage == "yes" -%}
coverage = "^7"
{% endif %}
{%- if cookiecutter.use_blue == "yes" -%}
blue = "^0.9.1"
{% endif %}
{%- if cookiecutter.use_black == "yes" -%}
black = "^22.3"
{% endif %}
{%- if cookiecutter.use_isort == "yes" -%}
isort = "^5"
{% endif %}
{%- if cookiecutter.use_pre_commit -%}
pre-commit = "^2"
{% endif %}
{%- if cookiecutter.use_flake8 == "yes" -%}
flake8 = "^4"
{% endif %}
{%- if cookiecutter.use_mypy == "yes" -%}
mypy = "^0.931"
{% endif %}
{%- if cookiecutter.use_bandit == "yes" -%}
bandit = "^1.7.5"
{% endif %}
{%- if cookiecutter.use_pydocstyle == "yes" -%}
pydocstyle = "^6.3.0"
{% endif %}
{%- if cookiecutter.use_vulture == "yes" -%}
vulture = "^2.7"
{% endif %}
{%- if cookiecutter.use_mccabe == "yes" -%}
mccabe = "^0.6.1"
{% endif %}
{%- if cookiecutter.use_containers in ['Docker', 'Podman'] -%}
# if you want to use docker-compose from your system, remove compose-go here
compose-go = "^2.18.0"
{% endif %}
{%- if cookiecutter.documentation_engine == 'mkdocs' -%}
Jinja2 = "<3.1.0"
mkdocs = ">=1.2.3,<2"
mkdocs-exclude = ">=1.0.2,<2"
mkdocs-jupyter = ">=0.20.0,<1"
mkdocs-literate-nav = ">=0.4.1,<1"
mkdocs-macros-plugin = ">=0.6.3,<1"
mkdocs-material = ">=8.2.1,<9"
mkdocstrings = ">=0.17.0,<0.18.0"
mkdocstrings-python = "^0.4.0"
{% elif cookiecutter.documentation_engine == 'sphinx' -%}
Sphinx = "^5.0.0"
sphinx-rtd-theme = "^1.1.1"
importlib-metadata = "^5.0.0"
myst-parser = "^0.18.1"
nbsphinx = "^0.9.2"
{% elif cookiecutter.documentation_engine == 'jupyter-book' -%}
jupyter-book = "^0.12.3"
myst-parser = "^0.15.0"
{% endif %}
{%- if cookiecutter.use_pytest == "yes" %}
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
{% endif %}
{%- if cookiecutter.use_blue == "yes" %}
[tool.blue]
line-length = 79
target-version = ["py38"]
force-exclude = """
(
  /(
      docs/*
    |.*\\.egg-info
  )/
)
"""
{% endif %}
{%- if cookiecutter.use_black == "yes" %}
[tool.black]
line-length = 79
target-version = ["py38"]
force-exclude = """
(
  /(
      docs/*
    |.*\\.egg-info
  )/
)
"""
{% endif %}
{%- if cookiecutter.use_isort == "yes" %}
[tool.isort]
ensure_newline_before_comments = true
line_length = 79
multi_line_output = 3
include_trailing_comma = true
skip_glob = ["docs/*", "*.egg-info"]
{% endif %}
{#- keep this line at the end of the file -#}
