{% if cookiecutter.project_layout == "src" -%}
{% set package_path = "src/" + cookiecutter.package_slug -%}
{% else -%}
{% set package_path = cookiecutter.package_slug -%}
{% endif -%}
[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"  # semantic-release
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.author_full_name }} <{{ cookiecutter.author_email }}>"]
license = "{{ cookiecutter.project_license }}"
include = [
  "*.cfg",
  "*.ini",
  "*.js",
  "*.json",
  "*.lock",
  "*.md",
  "*.py",
  "*.sh",
  "*.rst",
  "*.txt",
  "*.toml",
  "*.yml",
  "*.yaml",
  ".github",
  "conda",
  "docker",
  "docs",
  ".dockerignore",
  ".env.tpl",
  ".makim.yaml",
  ".containers-sugar.yaml",
  ".gitignore",
  "Makefile",
]
exclude = [
  ".git/*",
  ".env*",
]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
urllib3 = "<2"  # fix poetry issues
{# keep this line here #}
{%- if cookiecutter.use_pytest == "yes" -%}
pytest = "^7.3.2"
{% if cookiecutter.use_coverage == "yes" -%}
pytest-cov = "^4.1.0"
{% endif %}
{%- endif -%}{#- end of use_pytest -#}
{%- if cookiecutter.use_coverage == "yes" -%}
coverage = "^7.2.7"
{% endif %}
{%- if cookiecutter.use_blue == "yes" -%}
blue = "^0.9.1"
{% endif %}
{%- if cookiecutter.use_black == "yes" -%}
black = "^23.3.0"
{% endif %}
{%- if cookiecutter.use_isort == "yes" -%}
isort = "^5.12.0"
{% endif %}
{%- if cookiecutter.use_pre_commit -%}
pre-commit = "^3.3.2"
{% endif %}
{%- if cookiecutter.use_flake8 == "yes" -%}
flake8 = ">=4.0.1, <7"
{% endif %}
{%- if cookiecutter.use_ruff == "yes" -%}
ruff = "^0.0.272"
{% endif %}
{%- if cookiecutter.use_mypy == "yes" -%}
mypy = "^1.3.0"
{% endif %}
{%- if cookiecutter.use_bandit == "yes" -%}
bandit = "^1.7.5"
{% endif %}
{%- if cookiecutter.use_pydocstyle == "yes" -%}
pydocstyle = "^6.3.0"
{% endif %}
{%- if cookiecutter.use_vulture == "yes" -%}
vulture = "^2.7"
{% endif %}
{%- if cookiecutter.use_mccabe == "yes" -%}
mccabe = "^0.6.1"
{% endif %}
{%- if cookiecutter.use_containers in ['Docker', 'Podman'] -%}
# if you want to use docker-compose from your system, remove compose-go here
compose-go = "^2.18.1"
{% endif %}
{%- if cookiecutter.documentation_engine == 'mkdocs' -%}
Jinja2 = "^3.1.2"
mkdocs = "^1.4.3"
mkdocs-exclude = "^1.0.2"
mkdocs-jupyter = "^0.24.1"
mkdocs-literate-nav = "^0.6.0"
mkdocs-macros-plugin = ">=0.7.0,<1"
mkdocs-material = "^9.1.15"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^1.1.2"
{% elif cookiecutter.documentation_engine == 'sphinx' -%}
Sphinx = "^6.2.1"
sphinx-rtd-theme = "^1.2.2"
importlib-metadata = "^6.5.1"
myst-parser = "^0.19.2"
nbsphinx = "^0.9.2"
pandoc = "^2.3"
{% elif cookiecutter.documentation_engine == 'jupyter-book' -%}
jupyter-book = "^0.15.1"
myst-parser = "^0.18.1"
{% endif %}
{%- if cookiecutter.use_pytest == "yes" %}
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
{% endif %}
{%- if cookiecutter.use_blue == "yes" %}
[tool.blue]
line-length = 79
target-version = ["py38"]
force-exclude = '''(?x)(
    docs/*
  | .*\\.egg-info
)'''  # TOML's single-quoted strings do not require escaping backslashes
{% endif %}
{%- if cookiecutter.use_black == "yes" %}
[tool.black]
line-length = 79
target-version = ["py38"]
force-exclude = '''(?x)(
    docs/*
  | .*\\.egg-info
)'''  # TOML's single-quoted strings do not require escaping backslashes
{% endif %}
{%- if cookiecutter.use_isort == "yes" %}
[tool.isort]
ensure_newline_before_comments = true
line_length = 79
multi_line_output = 3
include_trailing_comma = true
skip_glob = ["docs/*", "*.egg-info"]
{% endif %}
{%- if cookiecutter.use_bandit == "yes" %}
[tool.bandit]
exclude_dirs = ["tests"]
targets = "{{ package_path }}"
{% endif %}
{%- if cookiecutter.use_vulture == "yes" %}
[tool.vulture]
exclude = ["tests"]
ignore_decorators = []
ignore_names = []
make_whitelist = true
min_confidence = 80
paths = ["{{ package_path }}"]
sort_by_size = true
verbose = false
{% endif %}
{%- if cookiecutter.use_ruff == "yes" %}
[tool.ruff]
line-length = 79
force-exclude = true
src = ["{{ package_path }}"]
exclude = [
  'docs',
]
select = [
  "F",   # pyflakes
]

[tool.ruff.pydocstyle]
convention = "numpy"
{% endif %}
{%- if cookiecutter.use_mypy == "yes" %}
[tool.mypy]
no_strict_optional = false
{% endif %}
{#- keep this line at the end of the file -#}
