[package]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
authors = [
  { name = "{{ cookiecutter.author_full_name }}", email = "{{ cookiecutter.author_email }}" },
]


[lib]
name = "{{ cookiecutter.project_slug }}"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.4"

[dependencies.pyo3]
version = "0.18.0"
# "abi3-py37" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.7
features = ["abi3-py37"]
