[package]
name = "{{ cookiecutter.package_slug }}"
version = "{{ cookiecutter.project_version }}"
authors = ["{{ cookiecutter.author_full_name }} <{{ cookiecutter.author_email }}>"]
edition = "2021"

[lib]
name = "{{ cookiecutter.package_slug }}"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.4"

[dependencies.pyo3]
version = "0.19.1"
# "extension-module" tells pyo3 we want to build an extension module (skips
#   linking against libpython.so)
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with
#   minimum Python version 3.8
features = ["extension-module", "abi3-py38"]
