{% if cookiecutter.project_layout == "src" -%}
{% set package_path = "src/" + cookiecutter.package_slug -%}
{% else -%}
{% set package_path = cookiecutter.package_slug -%}
{% endif -%}
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

{% include "build-system/base/pyproject.toml" %}
{% include "build-system/base/dev-deps-pyproject.toml" %}
{% include "build-system/base/urls-pyproject.toml" %}

[tool.pdm.version]
source = "file"
path = "{{ package_path }}/__init__.py"

{% include "build-system/base/dev-deps-config-pyproject.toml" %}
