{% if cookiecutter.project_layout == "src" -%}
{% set package_path = "src/" + cookiecutter.package_slug -%}
{% else -%}
{% set package_path = cookiecutter.package_slug -%}
{% endif -%}

[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}" #semantic-release
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
authors = ["{{ cookiecutter.author_full_name }} <{{ cookiecutter.author_email }}>"]
{% if cookiecutter.project_layout == "src" -%}
packages = [
  {include = "{{ cookiecutter.package_slug }}", from="src"},
]
{%- else -%}
packages = [
  {include = "{{ cookiecutter.package_slug }}"},
]
{% endif %}
license = "{{ cookiecutter.project_license }}"
exclude = [
  ".git/*",
  ".env*",
]
{%- if cookiecutter.use_mypy == "yes" %}
include = ["{{ package_path }}/py.typed"]
{% endif %}
{% if cookiecutter.command_line_interface != "None" -%}
[tool.poetry.scripts]
"{{ cookiecutter.project_slug }}" = "{{ cookiecutter.package_slug }}.__main__:app"
{% endif -%}
{# keep this line here #}
[tool.poetry.dependencies]
{%- if cookiecutter.documentation_engine == 'quarto' %}
python = ">=3.9,<4"
{% else %}
python = ">=3.8.1,<4"
{% endif %}
[tool.poetry.group.dev.dependencies]
{% if cookiecutter.use_pytest == "yes" -%}
pytest = ">=7.3.2"
{% if cookiecutter.use_coverage == "yes" -%}
pytest-cov = ">=4.1.0"
{% endif -%}
{%- endif -%}{#- end of use_pytest -#}
{%- if cookiecutter.use_hypothesis == "yes" -%}
hypothesis = ">=6.0"
{% endif -%}
{%- if cookiecutter.use_coverage == "yes" -%}
coverage = ">=7.2.7"
{% endif -%}
{%- if cookiecutter.use_black == "yes" -%}
black = ">=23.3.0,<23.10"
{% endif -%}
{%- if cookiecutter.use_isort == "yes" -%}
isort = ">=5.12.0"
{% endif -%}
{%- if cookiecutter.use_pre_commit -%}
pre-commit = ">=3.3.2"
{% endif -%}
{%- if cookiecutter.use_flake8 == "yes" -%}
flake8 = ">=4.0.1, <7"
{% endif -%}
{%- if cookiecutter.use_ruff == "yes" -%}
ruff = ">=0.2.0"
{% endif -%}
{%- if cookiecutter.use_mypy == "yes" -%}
mypy = ">=1.5.0"
{% endif -%}
{%- if cookiecutter.use_bandit == "yes" -%}
bandit = ">=1.7.5"
{% endif -%}
{%- if cookiecutter.use_pydocstyle == "yes" -%}
pydocstyle = ">=6.3.0"
{% endif -%}
{%- if cookiecutter.use_vulture == "yes" -%}
vulture = ">=2.7"
{% endif -%}
{%- if cookiecutter.use_mccabe == "yes" -%}
mccabe = ">=0.6.1"
{% endif -%}
{%- if cookiecutter.use_containers in ['Docker', 'Podman'] -%}
# if you want to use docker-compose from your system, remove compose-go here
compose-go = ">=2.18.1"
{% endif -%}
ipython = "<8"
ipykernel = ">=6.0.0"
{# keep this line here #}
{%- if cookiecutter.documentation_engine == 'mkdocs' %}
Jinja2 = ">=3.1.2"
mkdocs = ">=1.4.3"
mkdocs-exclude = ">=1.0.2"
mkdocs-jupyter = ">=0.24.1"
mkdocs-literate-nav = ">=0.6.0"
mkdocs-macros-plugin = ">=0.7.0,<1"
mkdocs-material = ">=9.1.15"
mkdocstrings = ">=0.21.2"
mkdocstrings-python = ">=1.1.2"
{# keep this line here #}
{%- elif cookiecutter.documentation_engine.startswith("sphinx") %}
Sphinx = ">=6.2.1"
sphinx-rtd-theme = ">=1.2.2"
importlib-metadata = ">=6.5.1"
myst-parser = ">=0.19.2"
nbsphinx = ">=0.9.2"
pandoc = ">=2.3"
{# keep this line here #}
{%- elif cookiecutter.documentation_engine == 'jupyter-book' %}
jupyter-book = ">=0.15.1"
myst-parser = ">=0.18.1"
{# keep this line here #}
{%- elif cookiecutter.documentation_engine == 'quarto' %}
quarto-cli = ">=1.4.550"
quartodoc = ">=0.7.2"
{% endif -%}
{%- if cookiecutter.use_makim == "yes" -%}
makim = "1.15.1"
{% endif -%}
# 'PosixPath' object has no attribute 'endswith'
virtualenv = "<=20.25.1"

{% include "build-system/base/dev-deps-config-pyproject.toml" %}
