[build-system]
requires = ["setuptools>=40.8.0", "wheel", "build>=1.2.2"]
build-backend = "setuptools.build_meta"

[[index]]
url = "https://test.pypi.org/simple"
default = true

[tool.uv.index]
url = "https://test.pypi.org/simple"
default = true


[tool.uv.pypi-dependencies]
"{{ cookiecutter.project_slug }}" = { path = ".", editable = true }

[tool.uv.dependencies]
python-build = ">=1.2.2"

[tool.pixi.environments]
dev = ["dev"]

{% include "build-system/base/pyproject.toml" %}
{% include "build-system/base/dev-deps-pyproject.toml" %}
{% include "build-system/base/urls-pyproject.toml" %}
{% include "build-system/base/dev-deps-config-pyproject.toml" %}
