[build-system]
requires = ["setuptools>=40.8.0", "wheel", "build>=1.2.2"]
build-backend = "setuptools.build_meta"

[tool.uv]
index-url = "https://pypi.org/simple"


{% include "build-system/base/pyproject.toml" %}
{% include "build-system/base/dev-deps-pyproject.toml" %}
{% include "build-system/base/urls-pyproject.toml" %}
{% include "build-system/base/dev-deps-config-pyproject.toml" %}
